Added Login dialog

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="homTop">#0089CF</color>
     <color name="whiteMy">#FFFFFF</color>
 
-
+    <color name="transparent">#00000000</color>
     <color name="kalerkontho_actionbar">#0089CF</color>
     <color name="gray">#A9A9A9</color>
 
