--- a/app/src/main/res/layout/help_dialog.xml
+++ b/app/src/main/res/layout/help_dialog.xml
@@ -2,18 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-  >
-
-
-    <LinearLayout
+    android:background="@color/white">
+    <RelativeLayout
         android:id="@+id/topViewHelp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/homTop"
-        android:orientation="horizontal"
-        android:padding="@dimen/dim10">
-
+        android:padding="5dp"
+      >
         <ImageView
             android:id="@+id/dissmissHelpBtn"
             android:layout_width="wrap_content"
@@ -23,14 +19,14 @@
 
         <TextView
             android:id="@+id/tvLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:text="@string/help"
+            android:layout_toRightOf="@+id/dissmissHelpBtn"
+            android:gravity="center"
+            android:text=""
             android:textSize="20sp"
             android:textColor="@color/whiteMy" />
-    </LinearLayout>
-
+    </RelativeLayout>
 
 
     <WebView
@@ -40,7 +36,12 @@
         android:layout_below="@+id/topViewHelp"
         />
 
-
+    <ProgressBar
+        android:id="@+id/progressHelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
