--- a/app/src/main/res/layout/registration_fragment_dialog.xml
+++ b/app/src/main/res/layout/registration_fragment_dialog.xml
@@ -25,8 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/registration"
-            android:textSize="20sp"
-            android:textColor="@color/whiteMy" />
+            android:textColor="@color/whiteMy"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <ImageView
@@ -91,6 +91,7 @@
             android:paddingBottom="10dp"
             android:paddingTop="20dp"
             android:singleLine="true" />
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
@@ -102,15 +103,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/enter"
-        android:paddingTop="@dimen/dim10"
+        android:layout_marginTop="@dimen/dim50"
+        android:background="@drawable/button"
+        android:gravity="center"
         android:paddingBottom="@dimen/dim10"
         android:paddingLeft="@dimen/dim40"
         android:paddingRight="@dimen/dim40"
-        android:layout_marginTop="@dimen/dim50"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:background="@drawable/button"
-        android:textColor="@color/whiteMy" />
+        android:paddingTop="@dimen/dim10"
+        android:text="@string/enter"
+        android:textColor="@color/whiteMy"
+        android:textSize="20sp" />
 
 </LinearLayout>
