--- a/app/src/main/res/layout/recycle_first_item.xml
+++ b/app/src/main/res/layout/recycle_first_item.xml
@@ -68,6 +68,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textColor="@android:color/holo_blue_light"
+            android:padding="3dp"
             android:textSize="12sp" />
 
     </LinearLayout>
