--- a/app/src/main/res/layout/motamot.xml
+++ b/app/src/main/res/layout/motamot.xml
@@ -5,17 +5,40 @@
     android:background="@android:color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp">
+   >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/homTop"
+        android:orientation="horizontal"
+        android:padding="@dimen/dim10">
+
+        <ImageView
+            android:id="@+id/imgBackComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/dim10"
+            android:src="@drawable/descrip_03" />
+
+        <TextView
+            android:id="@+id/tvComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/motamot"
+            android:textSize="20sp"
+            android:textColor="@color/whiteMy" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/motamotTitle"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_gravity="center"
         android:text="@string/motamotyour"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -88,6 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:gravity="center"
+        android:visibility="gone"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:text="@string/thanks"
