--- a/app/src/main/res/layout/catlist_dialog.xml
+++ b/app/src/main/res/layout/catlist_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@color/white">
     <RelativeLayout
-        android:id="@+id/topViewHelp"
+        android:id="@+id/topViewNewList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/homTop"
@@ -28,13 +28,12 @@
             android:textColor="@color/whiteMy" />
     </RelativeLayout>
 
-
-    <WebView
-        android:id="@+id/helpWeb"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/catRcyList"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/topViewHelp"
-        />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topViewNewList"/>
 
     <ProgressBar
         android:id="@+id/progressCat"
