--- a/app/src/main/res/layout/catlist_dialog.xml
+++ b/app/src/main/res/layout/catlist_dialog.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="#F5F5F5">
     <RelativeLayout
         android:id="@+id/topViewNewList"
         android:layout_width="match_parent"
@@ -33,6 +33,7 @@
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
         android:layout_below="@+id/topViewNewList"/>
 
     <ProgressBar
