--- a/app/src/main/res/layout/catlist_dialog.xml
+++ b/app/src/main/res/layout/catlist_dialog.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dim10"
-            android:src="@drawable/descripasasss_06" />
+            android:src="@drawable/descrip_03" />
 
         <TextView
             android:id="@+id/catHeadText"
@@ -33,7 +33,7 @@
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="5dp"
         android:layout_below="@+id/topViewNewList"/>
 
     <ProgressBar
