--- a/app/src/main/res/layout/recycle_latest_row.xml
+++ b/app/src/main/res/layout/recycle_latest_row.xml
@@ -92,7 +92,10 @@
                 android:layout_marginTop="5dp"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:padding="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
                 android:background="@color/homTop"
                 android:layout_alignParentRight="true"
                 />
