--- a/app/src/main/res/layout/details_view.xml
+++ b/app/src/main/res/layout/details_view.xml
@@ -21,204 +21,202 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/mainHeader">
 
-    <RelativeLayout
-        android:id="@+id/scrollRelate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-
-        <TextView
-            android:id="@+id/headingTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text=""
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
         <RelativeLayout
-            android:id="@+id/imageWhole"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/headingTxt"
-            >
-
-        <ImageView
-            android:id="@+id/mainBackground"
+            android:id="@+id/scrollRelate"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            >
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/headingTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:text=""
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        </ImageView>
             <RelativeLayout
+                android:id="@+id/imageWhole"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true">
-
-        <LinearLayout
-            android:id="@+id/img_action"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="#80000000"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical"
-                android:layout_weight="1">
+                android:layout_below="@+id/headingTxt">
 
                 <ImageView
-                    android:id="@+id/positive_like"
+                    android:id="@+id/mainBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
+
+
+                </ImageView>
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/positive_like" />
+                    android:layout_alignParentBottom="true">
 
-                <TextView
-                    android:id="@+id/txt_positive_like"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="7dp"
-                    android:gravity="center"
-                    android:textSize="11sp"
-                    android:textColor="@color/white" />
-            </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/img_action"
+                        android:layout_width="match_parent"
+                        android:layout_height="45dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:background="#80000000"
+                        android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_weight="1">
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/negative_like" />
+                            <ImageView
+                                android:id="@+id/positive_like"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/positive_like" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="7dp"
-                    android:textSize="11sp"
-                    android:id="@+id/txt_negative_like"
-                    android:textColor="@color/white" />
-            </LinearLayout>
+                            <TextView
+                                android:id="@+id/txt_positive_like"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="7dp"
+                                android:gravity="center"
+                                android:textColor="@color/white"
+                                android:textSize="11sp" />
+                        </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_weight="1">
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/comment" />
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/negative_like" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="7dp"
-                    android:textSize="11sp"
-                    android:id="@+id/txt_comment"
-                    android:textColor="@color/white" />
-            </LinearLayout>
+                            <TextView
+                                android:id="@+id/txt_negative_like"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="7dp"
+                                android:textColor="@color/white"
+                                android:textSize="11sp" />
+                        </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:layout_weight=".6">
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/share_details" />
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/comment" />
 
-            </LinearLayout>
+                            <TextView
+                                android:id="@+id/txt_comment"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="7dp"
+                                android:textColor="@color/white"
+                                android:textSize="11sp" />
+                        </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:gravity="center_vertical"
-                android:layout_height="match_parent"
-                android:layout_weight=".5">
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".6"
+                            android:gravity="center_vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/add_details" />
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/share_details" />
 
-            </LinearLayout>
+                        </LinearLayout>
 
-        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".5"
+                            android:gravity="center_vertical">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/add_details" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+                </RelativeLayout>
             </RelativeLayout>
-        </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/belowBackImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imageWhole"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp">
-
-            <TextView
-                android:id="@+id/dateTv"
+            <RelativeLayout
+                android:id="@+id/belowBackImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:layout_below="@+id/imageWhole"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp">
 
-                android:textColor="#bfc9ca" />
+                <TextView
+                    android:id="@+id/dateTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=""
+
+                    android:textColor="#bfc9ca" />
+
+                <TextView
+                    android:id="@+id/catagoryTv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/dateTv"
+                    android:text=""
+                    android:textColor="#0089CF"
+                    android:textSize="16sp" />
+
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/hashLine"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_below="@+id/belowBackImage"
+                android:layout_margin="10dp"
+                android:background="#bfc9ca" />
 
             <TextView
-                android:id="@+id/catagoryTv"
+                android:id="@+id/detailsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/dateTv"
-                android:text=""
-                android:textColor="#0089CF"
-                android:textSize="16sp" />
+                android:layout_below="@+id/hashLine"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="" />
 
+            <ProgressBar
+                android:id="@+id/progressShow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone" />
         </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_below="@+id/belowBackImage"
-            android:layout_margin="10dp"
-            android:id="@+id/hashLine"
-            android:background="#bfc9ca" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/detailsText"
-            android:text=""
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_below="@+id/hashLine"/>
-
-        <ProgressBar
-            android:id="@+id/progressShow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-    </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
