--- a/app/src/main/res/layout/header_favorite.xml
+++ b/app/src/main/res/layout/header_favorite.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/backBtn"
         android:layout_centerVertical="true"
+        android:padding="10dp"
         android:background="@drawable/back_white"
         android:layout_marginLeft="20dp"/>
     <TextView
