--- a/app/src/main/res/values-small/dimens.xml
+++ b/app/src/main/res/values-small/dimens.xml
@@ -15,7 +15,7 @@
     <dimen name="dim07">5dp</dimen>
     <dimen name="dim30">20dp</dimen>
     <dimen name="dim40">30dp</dimen>
-
+    <dimen name="dim70">50dp</dimen>
     <dimen name="photoh">90dp</dimen>
     <dimen name="photow">100dp</dimen>
 
