--- a/app/src/main/res/values-xlarge/dimens.xml
+++ b/app/src/main/res/values-xlarge/dimens.xml
@@ -13,7 +13,7 @@
 
     <dimen name="dim20">30dp</dimen>
     <dimen name="dim07">11dp</dimen>
-
+    <dimen name="dim70">110dp</dimen>
     <dimen name="photoh">150dp</dimen>
     <dimen name="photow">185dp</dimen>
 
