--- a/app/src/main/res/values-normal/dimens.xml
+++ b/app/src/main/res/values-normal/dimens.xml
@@ -17,7 +17,7 @@
     <dimen name="dim07">7dp</dimen>
     <dimen name="dim30">30dp</dimen>
     <dimen name="dim40">40dp</dimen>
-
+    <dimen name="dim70">70dp</dimen>
     <dimen name="photoh">100dp</dimen>
     <dimen name="photow">120dp</dimen>
 
