--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -42,8 +42,8 @@
 
                <ToggleButton
                    android:id="@+id/notificationTg"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
+                   android:layout_width="60dp"
+                   android:layout_height="25dp"
                    android:background="@drawable/check"
                    android:textOn=""
                    android:textOff=""
@@ -101,8 +101,8 @@
                 android:orientation="vertical">
                 <ToggleButton
                     android:id="@+id/soundTg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="25dp"
                     android:background="@drawable/check"
                     android:textOn=""
                     android:textOff=""
@@ -154,8 +154,8 @@
                 android:orientation="vertical">
                 <ToggleButton
                     android:id="@+id/vivrateTg"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="25dp"
                     android:background="@drawable/check"
                     android:textOn=""
                     android:textOff=""
