--- a/app/src/main/res/layout/details_view.xml
+++ b/app/src/main/res/layout/details_view.xml
@@ -45,7 +45,8 @@
                 <ImageView
                     android:id="@+id/mainBackground"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
+                    android:background="@drawable/white_bg"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp">
 
