--- a/app/src/main/res/layout/header_details.xml
+++ b/app/src/main/res/layout/header_details.xml
@@ -9,9 +9,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/backBtn"
         android:padding="10dp"
+        android:layout_margin="15dp"
         android:layout_centerVertical="true"
-        android:background="@drawable/back_white"
-        android:layout_marginLeft="20dp"/>
+        android:background="@drawable/back_white"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
