--- a/app/src/main/res/layout/header_favorite.xml
+++ b/app/src/main/res/layout/header_favorite.xml
@@ -4,14 +4,15 @@
     android:layout_height="match_parent"
     android:background="@color/homTop">
 
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/backBtn"
-        android:layout_centerVertical="true"
         android:padding="10dp"
-        android:background="@drawable/back_white"
-        android:layout_marginLeft="20dp"/>
+        android:layout_margin="15dp"
+        android:layout_centerVertical="true"
+        android:background="@drawable/back_white"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
