--- a/app/src/main/res/layout/motamot.xml
+++ b/app/src/main/res/layout/motamot.xml
@@ -50,7 +50,7 @@
         android:layout_marginTop="@dimen/dim40"
         android:text="@string/motamotyour"
         android:textColor="@android:color/black"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -109,10 +109,10 @@
         android:layout_marginTop="@dimen/dim50"
         android:background="@drawable/button"
         android:gravity="center"
-        android:paddingBottom="10dp"
-        android:paddingLeft="@dimen/dim50"
-        android:paddingRight="70dp"
-        android:paddingTop="10dp"
+        android:paddingBottom="@dimen/dim10"
+        android:paddingLeft="@dimen/dim70"
+        android:paddingRight="@dimen/dim70"
+        android:paddingTop="@dimen/dim10"
         android:text="@string/motamot"
         android:textColor="@color/white"
         android:textSize="20sp"
