--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,10 @@
                     android:src="@drawable/kaler_kontho_logo" />
 
                 <TextView
+                    android:id="@+id/tvDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="বুধবার ২৭ জুলাই ২০১৬" />
+                    android:text="Date" />
 
             </LinearLayout>
 
@@ -53,9 +54,10 @@
                 android:id="@+id/setting_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
+                android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="30dp"
+                android:layout_marginRight="20dp"
                 android:src="@drawable/menu_side" />
 
         </RelativeLayout>
