--- a/app/src/main/res/layout/login_dialog.xml
+++ b/app/src/main/res/layout/login_dialog.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dim10"
-            android:src="@drawable/descripasasss_06" />
+            android:src="@drawable/cross_white" />
 
         <TextView
             android:id="@+id/tvLogin"
