--- a/app/src/main/res/layout/details_view.xml
+++ b/app/src/main/res/layout/details_view.xml
@@ -11,8 +11,8 @@
 
         <include
             layout="@layout/header_details"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 
@@ -61,7 +61,7 @@
                     <LinearLayout
                         android:id="@+id/img_action"
                         android:layout_width="match_parent"
-                        android:layout_height="45dp"
+                        android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:background="#80000000"
@@ -79,7 +79,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/positive_like" />
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:padding="3dp"
+                                android:src="@drawable/positive_like" />
 
                             <TextView
                                 android:id="@+id/txt_positive_like"
@@ -99,10 +102,14 @@
                             android:gravity="center_vertical">
 
                             <ImageView
+                                android:id="@+id/dislikeBtn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/negative_like" />
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:padding="3dp"
+                                android:src="@drawable/positive_like" />
 
                             <TextView
                                 android:id="@+id/txt_negative_like"
@@ -124,7 +131,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/comment" />
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:padding="3dp"
+                                android:src="@drawable/comment" />
 
                             <TextView
                                 android:id="@+id/txt_comment"
@@ -146,7 +156,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/share_details" />
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:padding="3dp"
+                                android:src="@drawable/share_details" />
 
                         </LinearLayout>
 
@@ -160,7 +173,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/add_details" />
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:padding="3dp"
+                                android:src="@drawable/add_details" />
 
                         </LinearLayout>
 
