--- a/app/src/main/res/layout/header_details.xml
+++ b/app/src/main/res/layout/header_details.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/homTop">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/backBtn"
-        android:padding="10dp"
+        android:padding="5dp"
         android:layout_margin="15dp"
         android:layout_centerVertical="true"
-        android:background="@drawable/back_white"/>
+        android:background="@drawable/descrip_03"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:text="@string/details"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="5dp"
         android:layout_toRightOf="@+id/backBtn"/>
 
     <ImageView
@@ -28,7 +28,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:background="@drawable/setting_white"
-        android:layout_marginRight="20dp"/>
+        android:layout_marginRight="15dp"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
