--- a/app/src/main/res/layout/comment_row.xml
+++ b/app/src/main/res/layout/comment_row.xml
@@ -1,45 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dim20"
+    android:layout_margin="@dimen/dim20"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-        android:orientation="vertical">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tvNameCom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/name"
+                android:textColor="@color/homTop"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvDateCom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:text="0.0"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
         <TextView
-            android:id="@+id/tvNameCom"
+            android:id="@+id/tvCommentDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/name"
-            android:textSize="18sp"
-            android:padding="5dp"
-            android:textColor="@color/homTop" />
+            android:layout_marginTop="5dp"
+            android:text="@string/comment"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tvDateCom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:text="0.0"
-            android:textSize="12sp"
-            android:textColor="@color/black" />
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/tvCommentDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/comment"
-        android:textSize="18sp"
-        android:padding="5dp"
-        android:textColor="@color/black" />
-    </LinearLayout>
 
 </LinearLayout>
