--- a/app/src/main/res/layout/header_details.xml
+++ b/app/src/main/res/layout/header_details.xml
@@ -11,7 +11,7 @@
         android:padding="5dp"
         android:layout_margin="15dp"
         android:layout_centerVertical="true"
-        android:background="@drawable/descrip_03"/>
+        android:background="@drawable/back_button"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
