--- a/app/src/main/res/layout/header_favorite.xml
+++ b/app/src/main/res/layout/header_favorite.xml
@@ -23,6 +23,7 @@
         android:layout_toRightOf="@+id/backBtn"/>
 
     <ImageView
+        android:visibility="invisible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/settingBtn"
