--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
 
-    <android.support.design.widget.TabLayout
+    <com.kalerkantho.Utils.CustomTabLayout
         android:id="@+id/tabs"
         app:tabGravity="fill"
         app:tabMode="scrollable"
@@ -17,7 +17,7 @@
         app:tabTextColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.design.widget.TabLayout>
+    </com.kalerkantho.Utils.CustomTabLayout>
 
 
     <android.support.v4.view.ViewPager
