--- a/app/src/main/res/layout/catlist_dialog.xml
+++ b/app/src/main/res/layout/catlist_dialog.xml
@@ -15,13 +15,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dim10"
+            android:layout_centerVertical="true"
             android:src="@drawable/back_button" />
 
         <TextView
             android:id="@+id/catHeadText"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/dissmissHelpBtn"
+            android:layout_centerInParent="true"
             android:gravity="center"
             android:text=""
             android:textSize="20sp"
