--- a/app/src/main/res/layout/nirbachitofragment.xml
+++ b/app/src/main/res/layout/nirbachitofragment.xml
@@ -2,74 +2,72 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F5F5F5"
- >
+    android:background="#F5F5F5">
 
     <LinearLayout
         android:id="@+id/emptyFv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="visible"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-       >
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-    <ImageView
-        android:id="@+id/selectBtniv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:src="@drawable/addfavo"/>
+        <ImageView
+            android:id="@+id/selectBtniv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:src="@drawable/addfavo" />
 
         <TextView
             android:id="@+id/tvLike"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_marginTop="15dp"
+            android:gravity="center_horizontal"
+            android:text="@string/nijoso"
             android:textColor="@color/black"
-            android:textSize="20sp"
-            android:text="@string/nijoso"/>
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tvTitle1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_marginTop="5dp"
+            android:gravity="center_horizontal"
+            android:text="@string/subjectplus"
             android:textColor="@color/homTop"
-            android:textSize="16sp"
-            android:text="@string/subjectplus"/>
+            android:textSize="16sp" />
 
 
         <TextView
             android:id="@+id/tvTitle2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_marginTop="25dp"
+            android:gravity="center_horizontal"
+            android:text="@string/seehere"
             android:textColor="@color/homTop"
-            android:textSize="16sp"
-            android:text="@string/seehere"/>
+            android:textSize="16sp" />
 
 
         <TextView
             android:id="@+id/startBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:textColor="@color/white"
             android:background="@color/homTop"
-            android:textSize="20sp"
+            android:gravity="center_horizontal"
+            android:paddingBottom="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
             android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:text="@string/letsgoo"/>
+            android:text="@string/letsgoo"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -80,7 +78,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 
     <ProgressBar
@@ -88,6 +86,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
